# simctl

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build_test.yaml
src/: boot.rs  device.rs  error.rs  get_app_container.rs  getenv.rs  install.rs  io.rs  keychain.rs  launch.rs  lib.rs  list.rs  mock.rs  open_url.rs  privacy.rs  push.rs  shutdown.rs  simctl.rs  status_bar.rs  terminate.rs  ui.rs  uninstall.rs
tests/Example.app/: Info.plist
