[package]
name = "simctl"
version = "0.1.0"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
description = "Rust wrapper around Xcode's `simctl`."
license = "MIT"
repository = "https://github.com/polyhorn/simctl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

[dev-dependencies]
serial_test = "0.5.0"
